Made changes for responsive design and better overall look

--- a/Q&A/supplementen.html
+++ b/Q&A/supplementen.html
@@ -18,6 +18,8 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="../css/style.css" rel="stylesheet">
+    <!-- Responsive CSS -->
+    <link href="../css/responsive.css" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" href="../img/favicon.ico">
 </head>
@@ -42,6 +44,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                  <li class="visible-xs">
+                      <a href="index.html">Home</a>
+                  </li>
                     <li>
                         <a href="../biografie.html">Biografie</a>
                     </li>
@@ -97,14 +102,6 @@
                     <!-- End social -->
                 </div>
                 <!-- End col-lg-6 col-sm-6 col-xs-12-->
-                <div class="col-lg-6 col-sm-6 col-xs-12">
-                    <adress>
-                        <h4>Ivan Atmadiwiryo - Personal Trainer</h4>
-                        <h6><span class="glyphicon glyphicon-earphone myGlyphicon1"></span> GSM: +32 (0) 497 62 26 48</h6>
-                        <h6><span class="glyphicon glyphicon-envelope myGlyphicon1"></span><a href="mailto:ivan_atmadiwiryo@yahoo.com"> ivan_atmadiwiryo@yahoo.com</a></h6>
-                    </adress>
-                </div>
-                <!-- End col-lg-6 col-sm-6 col-xs-12 -->
                 <h6>Copyright &copy; 2016 - Made by Jorne Moonen All rights reserved</h6>
             </div>
             <!-- End row footer -->
