--- a/biografie.html
+++ b/biografie.html
@@ -18,6 +18,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- Responsive CSS -->
+    <link href="css/responsive.css" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico">
 </head>
@@ -42,6 +44,9 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
+                      <li class="visible-xs">
+                          <a href="index.html">Home</a>
+                      </li>
                         <li>
                             <a href="biografie.html">Biografie</a>
                         </li>
