--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- Responsive CSS -->
+    <link href="css/responsive.css" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico">
 </head>
@@ -42,6 +44,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                  <li class="visible-xs">
+                      <a href="index.html">Home</a>
+                  </li>
                     <li>
                         <a href="biografie.html">Biografie</a>
                     </li>
@@ -84,15 +89,15 @@
                     <form role="form">
                         <div class="form-group">
                             <label for="email">Naam</label>
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Arnold Schwarzenegger" />
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Name*" />
                         </div>
                         <div class="form-group">
                             <label for="email">E-mail</label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Voorbeeld@gmail.com" />
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Email*" />
                         </div>
                         <div class="form-group">
                             <label for="email">Gsm / Telefoon</label>
-                            <input type="text" class="form-control" id="telnr" name="telnr" placeholder="0488/55.88.77" />
+                            <input type="text" class="form-control" id="telnr" name="telnr" placeholder="Phone*" />
                         </div>
                         <div class="form-group">
                             <h4>Onderwerp</h4>
@@ -122,20 +127,12 @@
                         </div>
                         <div class="form-group">
                             <label for="message">Bericht</label>
-                            <textarea class="form-control" rows="6" id="message" name="message" placeholder="Uw bericht hier..."></textarea>
+                            <textarea class="form-control" rows="6" id="message" name="message" placeholder="Message*"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-succes">Verzenden</button>
+                        <button type="submit" class="btn btn-succes">Send Message</button>
                     </form>
                 </form>
                 <!-- end mail form php-->
-            </div>
-            <div class="col-lg-6 col-xs-12 col-sm-12">
-                <adress>
-                    <h4>Ivan Atmadiwiryo - Personal Trainer</h4>
-                    <h6><span class="glyphicon glyphicon-earphone"></span> GSM: +32 (0) 497 62 26 48</h6>
-                    <h6><span class="glyphicon glyphicon-envelope"></span><a href="mailto:ivan_atmadiwiryo@yahoo.com">  ivan_atmadiwiryo@yahoo.com</a></h6>
-                    <h6><span class="glyphicon glyphicon-map-marker"></span> Vlaslaan 18, 2640 Mortsel</h6>
-                </adress>
             </div>
             <!-- end adress -->
         </div>
