--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>PT-Atman | Personal Trainer</title>
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Meta tags-->
     <meta name="description" content="Book me as a Personal Trainer - Ivan Atmadiwiryo">
     <meta name="keywords" content="fitness, personal trainer, afvallen">
     <meta name="author" content="Jorne Moonen - Graphic Design & Front-end Developer">
-
-    <title>PT-Atman - Personal Trainer</title>
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,6 +17,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- Responsive CSS -->
+    <link href="css/responsive.css" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.ico">
 
@@ -43,6 +44,9 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
+                      <li class="visible-xs">
+                          <a href="index.html">Home</a>
+                      </li>
                         <li>
                             <a href="biografie.html">Biografie</a>
                         </li>
