--- a/personalTraining.html
+++ b/personalTraining.html
@@ -18,6 +18,8 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="../css/style.css" rel="stylesheet">
+    <!-- Responsive CSS -->
+    <link href="../css/responsive.css" rel="stylesheet">
     <!-- Favicon -->
     <link rel="icon" href="../img/favicon.ico">
 </head>
@@ -42,9 +44,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                  <li class="visible-xs">
+                      <a href="index.html">Home</a>
+                  </li>
                     <li>
                         <a href="biografie.html">Biografie</a>
-                    </li>	
+                    </li>
 					<li class="dropdown">
 					  <a href="personalTraining.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Personal training<span class="caret"></span></a>
 					  <ul class="dropdown-menu">
@@ -62,7 +67,7 @@
 						<li><a href="Q&A/voeding.html">Voeding</a></li>
 						<li><a href="Q&A/supplementen.html">Supplementen</a></li>
 					  </ul>
-					</li>						
+					</li>
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
